# mu-rust

./: Cargo.toml
libs/common/: Cargo.toml
libs/common/src/: lib.rs
libs/message_client/: Cargo.toml
libs/message_client/src/: lib.rs
libs/message_client/tests/: message_client.rs
libs/message_common/: Cargo.toml
libs/service_common/: Cargo.toml
libs/service_common/src/: constants.rs  extract_session_headers.rs  lib.rs
libs/sparql_client/: Cargo.toml
libs/sparql_client/src/: lib.rs
libs/sparql_client/src/test_templ/: select_query.sparql  update_query.sparql
services/message_broker/: Cargo.toml
services/message_broker/src/: exchange_manager.rs  main.rs
