
[workspace]

members = [
  "services/message_broker",
  "libs/message_client",
  "libs/common",
  "libs/message_common",
  "libs/service_common",
  "libs/sparql_client",
]


[workspace.dependencies]
serde = "1.0.160"
serde_json = "1.0.96"
bincode = "1.3.3"
tokio = "1.27.0"
uuid = "1.3.1"
chrono = "0.4.24"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
axum = "0.6.16"
tower-http = "0.4.0"
futures-util = "0.3.28"
async-trait = "0.1.68"
dirs = "5.0.0"
tower = "0.4.13"
queue-file = "1.4.10"
reqwest = "0.11.16"
tokio-tungstenite = "0.18.0"
futures = "0.3.28"
axum-core = "0.3.4"
hyper = "0.14.26"
toml = "0.7.3"
serde_yaml = "0.9"
regex = "1.7.3"
hyper-rustls = "0.24.0"
rustls = "0.21.0"
async-redis-session = "0.2.2"
async-session = "3.0.0"
axum-sessions = "0.5.0"
axum-extra = "0.7.4"
rand = "0.8.5"
base64 = "0.21.0"
jsonwebtoken = "8.3.0"
mime_guess = "2.0.4"
multipart = "0.18.0"
tokio-util = "0.7.7"
image = "0.24.6"
tokio-stream = "0.1.12"
cron = "0.12.0"
time = "0.3.20"
sparesults = "0.1.7"
spargebra = "0.2.7"
rio_turtle = "0.8.4"
oxrdf = "0.1.5"
handlebars = "4.3.6"
minijinja = "0.32.0"
tinytemplate = "1.2.1"
new_string_template = "1.4"


mu_rust_common = { path = "./libs/common", version = "0.1.0" }
mu_rust_message_common = { path = "./libs/message_common", version = "0.1.0" }
mu_rust_message_client = { path = "./libs/message_client", version = "0.1.0" }
mu_rust_service_common = { path = "./libs/service_common", version = "0.1.0" }
mu_rust_sparql_client = { path = "./libs/sparql_client", version = "0.1.0" }
mu_rust_message_broker = { path = "./services/message_broker", version = "0.1.0" }

[workspace.package]
version = "0.1.0"
authors = ["Nordine Bittich"]
description = "Having some fun with the mu framework"
documentation = "https://github.com/nbittich/mu-rust"
rust-version = "1.69"
edition = "2021"
license = "MPL-2.0"
