[package]
name = "mu_rust_service_common"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
axum = { workspace = true }
tracing-subscriber = { workspace = true, features = [
  "env-filter",
  "time",
  "local-time",
] }
tracing = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
base64 = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
time = { workspace = true, features = ["formatting", "local-offset", "macros"] }
chrono = { workspace = true }
