[package]
name = "mu_rust_service_common"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
tracing = { workspace = true }
axum = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["v4"] }
async-trait = { workspace = true }
mu_rust_common = { workspace = true }
