[package]
name = "mu_rust_sparql_client"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
tracing = { workspace = true }
spargebra = { workspace = true }
sparesults = { workspace = true }
new_string_template = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
mu_rust_common = { workspace = true }

[dependencies.reqwest]
workspace = true
features = ["json", "rustls-tls"]
